packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/docs_planner_rank_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "hits": [
    {
      "gap": {
        "doc_ids": [],
        "entity_id": "repo:gateway-sync:symbol:GatewaySyncPkg.explain",
        "example_ids": [],
        "format_hints": [],
        "gap_id": "repo:gateway-sync:projection-gap:symbol_reference_without_documentation:repo:gateway-sync:symbol:GatewaySyncPkg.explain",
        "kind": "symbol_reference_without_documentation",
        "module_ids": [
          "repo:gateway-sync:module:GatewaySyncPkg"
        ],
        "page_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.explain",
        "page_kind": "reference",
        "path": "src/GatewaySyncPkg.jl",
        "repo_id": "gateway-sync",
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.explain"
        ],
        "title": "GatewaySyncPkg.explain"
      },
      "priority_score": 96,
      "reasons": [
        {
          "code": "gap_kind_base",
          "detail": "base priority from projected gap kind `symbol_reference_without_documentation`",
          "points": 92
        },
        {
          "code": "reference_page_bonus",
          "detail": "reference page bonus",
          "points": 2
        },
        {
          "code": "module_anchor_bonus",
          "detail": "1 attached module anchor(s)",
          "points": 1
        },
        {
          "code": "symbol_anchor_bonus",
          "detail": "1 attached symbol anchor(s)",
          "points": 1
        }
      ]
    },
    {
      "gap": {
        "doc_ids": [],
        "entity_id": "repo:gateway-sync:symbol:GatewaySyncPkg.solve",
        "example_ids": [],
        "format_hints": [],
        "gap_id": "repo:gateway-sync:projection-gap:symbol_reference_without_documentation:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
        "kind": "symbol_reference_without_documentation",
        "module_ids": [
          "repo:gateway-sync:module:GatewaySyncPkg"
        ],
        "page_id": "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve",
        "page_kind": "reference",
        "path": "src/GatewaySyncPkg.jl",
        "repo_id": "gateway-sync",
        "symbol_ids": [
          "repo:gateway-sync:symbol:GatewaySyncPkg.solve"
        ],
        "title": "GatewaySyncPkg.solve"
      },
      "priority_score": 96,
      "reasons": [
        {
          "code": "gap_kind_base",
          "detail": "base priority from projected gap kind `symbol_reference_without_documentation`",
          "points": 92
        },
        {
          "code": "reference_page_bonus",
          "detail": "reference page bonus",
          "points": 2
        },
        {
          "code": "module_anchor_bonus",
          "detail": "1 attached module anchor(s)",
          "points": 1
        },
        {
          "code": "symbol_anchor_bonus",
          "detail": "1 attached symbol anchor(s)",
          "points": 1
        }
      ]
    },
    {
      "gap": {
        "doc_ids": [
          "repo:gateway-sync:doc:docs/orphan.md"
        ],
        "entity_id": "repo:gateway-sync:doc:docs/orphan.md",
        "example_ids": [],
        "format_hints": [
          "md"
        ],
        "gap_id": "repo:gateway-sync:projection-gap:documentation_page_without_anchor:repo:gateway-sync:doc:docs/orphan.md",
        "kind": "documentation_page_without_anchor",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:docs/orphan.md",
        "page_kind": "explanation",
        "path": "docs/orphan.md",
        "repo_id": "gateway-sync",
        "symbol_ids": [],
        "title": "orphan"
      },
      "priority_score": 90,
      "reasons": [
        {
          "code": "gap_kind_base",
          "detail": "base priority from projected gap kind `documentation_page_without_anchor`",
          "points": 88
        },
        {
          "code": "explanation_page_bonus",
          "detail": "explanation page bonus",
          "points": 1
        },
        {
          "code": "doc_anchor_bonus",
          "detail": "1 attached documentation anchor(s)",
          "points": 1
        }
      ]
    },
    {
      "gap": {
        "doc_ids": [],
        "entity_id": "repo:gateway-sync:example:examples/orphan_demo.jl",
        "example_ids": [
          "repo:gateway-sync:example:examples/orphan_demo.jl"
        ],
        "format_hints": [],
        "gap_id": "repo:gateway-sync:projection-gap:example_howto_without_anchor:repo:gateway-sync:example:examples/orphan_demo.jl",
        "kind": "example_how_to_without_anchor",
        "module_ids": [],
        "page_id": "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/orphan_demo.jl",
        "page_kind": "how_to",
        "path": "examples/orphan_demo.jl",
        "repo_id": "gateway-sync",
        "symbol_ids": [],
        "title": "orphan_demo"
      },
      "priority_score": 85,
      "reasons": [
        {
          "code": "gap_kind_base",
          "detail": "base priority from projected gap kind `example_how_to_without_anchor`",
          "points": 84
        },
        {
          "code": "example_anchor_bonus",
          "detail": "1 attached example anchor(s)",
          "points": 1
        }
      ]
    }
  ],
  "repo_id": "gateway-sync"
}
