packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/docs_projected_gap_report_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "gaps": [],
  "repo_id": "modelica-gateway-projected-gap-report",
  "summary": {
    "by_kind": [],
    "gap_count": 0,
    "page_count": 11
  }
}
